--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,8 +2,11 @@ body {
     background: url("../images/background.jpg") repeat;
 }
 
-.info {
-    text-align: center;
+.pictureframe {
+    background-color: #F2F2F2;
+    border-radius: 7px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    padding: 5px;
 }
 
 .title {
@@ -12,87 +15,7 @@ body {
     color: #333;
 }
 
-.masonry {
-  -moz-transition: all .3s ease-in-out;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  -moz-column-gap: 30px;
-  -webkit-column-gap: 30px;
-  column-gap: 30px;
-  -moz-column-fill: initial;
-  -webkit-column-fill: initial;
-  column-fill: initial;
-}
-.masonry .brick {
-  margin-bottom: 30px;
-  overflow: hidden;
-}
-.masonry .brick img {
-  -moz-transition: all .3s ease-in-out;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
-.masonry .brick:hover img {
-  opacity: .65;
-}
-.masonry.bordered {
-  -moz-column-rule: 1px solid #eee;
-  -webkit-column-rule: 1px solid #eee;
-  column-rule: 1px solid #eee;
-  -moz-column-gap: 50px;
-  -webkit-column-gap: 50px;
-  column-gap: 50px;
-}
-.masonry.bordered .brick {
-  padding-bottom: 25px;
-  margin-bottom: 25px;
-  border-bottom: 1px solid #eee;
-}
-.masonry.gutterless {
-  -moz-column-gap: 0;
-  -webkit-column-gap: 0;
-  column-gap: 0;
-}
-.masonry.gutterless .brick {
-  margin-bottom: 0;
-}
-
-.span {
-  -moz-column-span: all;
-  -webkit-column-span: all;
-  column-span: all;
-  *margin: 30px 0;
-}
-
-@media only screen and (min-width: 1024px) {
-  .desc {
-    font-size: 1.25em;
-  }
-
-  .intro {
-    letter-spacing: 1px;
-  }
-
-  .wrapper {
-    width: 80%;
-    padding: 2em;
-  }
-
-  .masonry {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .wrapper {
-    width: 85%;
-    padding: 1.5em;
-  }
-
-  .masonry {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
+.date {
+    margin-top: 2px;
+    text-align: center;
 }
